fixed light/dark mode button

--- a/client/src/styles/LightDarkToggle.css
+++ b/client/src/styles/LightDarkToggle.css
@@ -1,9 +1,6 @@
 .toggle-switch button {
     height: 40px;
     width: 40px;
-}
-
-.activated {
     background-color: blue;
 }
 
